package com.lldprep.systems.symbolsearch.model;

public enum SymbolType {
    CLASS,
    METHOD,
    FIELD,
    FILE,
    VARIABLE
}
